--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,10 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
+*.pyc
+*.db
+*.ini
+*.log
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
